--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        
+        <dependency>
+            <groupId>com.jcarrierpigmeon</groupId>
+            <artifactId>jcarrierpigmeon</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
     
     <properties>
